lib/utils/transform-array.js
module.exports = ( function () {

"use strict";
/*
 * Generated by WikiPEG
 */



function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;

  this.name     = "SyntaxError";
}

peg$subclass(peg$SyntaxError, Error);

function peg$Reference(value) {
  this.value = value;
}

peg$Reference.prototype = {
  get: function() {
    return this.value;
  },
  set: function(value) {
    this.value = value;
  }
};

function peg$DefaultTracer() {
  this.indentLevel = 0;
}

peg$DefaultTracer.prototype.trace = function(event) {
  var that = this;

  function log(event) {
    function repeat(string, n) {
      var result = "", i;

      for (i = 0; i < n; i++) {
        result += string;
      }

      return result;
    }

    function pad(string, length) {
      return string + repeat(" ", length - string.length);
    }

    function formatArgs(argMap) {
      var argParts = [];
      for (let argName in argMap) {
        if (argName === 'silence') {
          continue;
        }
        if (argName === 'boolParams') {
          argParts.push('0x' + argMap[argName].toString(16));
        } else {
          let displayName = argName.replace(/^param_/, '');
          if (typeof argMap[argName] === 'object' && argMap[argName].value !== undefined) {
            argParts.push(displayName + "=&" + JSON.stringify(argMap[argName].value));
          } else {
            argParts.push(displayName + "=" + argMap[argName]);
          }
        }
      }
      if (argParts.length) {
        return ' <' + argParts.join(', ') + '>';
      } else {
        return '';
      }
    }

    console.log(
      pad(
        event.location.start.line + ":" + event.location.start.column + "-"
        + event.location.end.line + ":" + event.location.end.column + " ",
        20
      )
      + pad(event.type, 10) + " "
      + repeat("  ", that.indentLevel) + event.rule
      + formatArgs(event.args)
    );
  }

  switch (event.type) {
    case "rule.enter":
      log(event);
      this.indentLevel++;
      break;

    case "rule.match":
      this.indentLevel--;
      log(event);
      break;

    case "rule.fail":
      this.indentLevel--;
      log(event);
      break;

    default:
      throw new Error("Invalid event type: " + event.type + ".");
  }
};

function peg$parse(input, options = {}) {
  var parser = this,
      peg$currPos = 0,
      peg$savedPos = 0,
      peg$FAILED = {},
      peg$startRule = options.startRule || '(DEFAULT)',
      peg$result;

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description) {
    throw peg$buildException(
      null,
      [{ type: "other", description: description }],
      input.substring(peg$savedPos, peg$currPos),
      peg$computeLocation(peg$savedPos, peg$currPos)
    );
  }

  function error(message) {
    throw peg$buildException(
      message,
      null,
      input.substring(peg$savedPos, peg$currPos),
      peg$computeLocation(peg$savedPos, peg$currPos)
    );
  }

  var peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [];

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p, ch;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column,
        seenCR: details.seenCR
      };

      while (p < pos) {
        ch = input.charAt(p);
        if (ch === "\n") {
          if (!details.seenCR) { details.line++; }
          details.column = 1;
          details.seenCR = false;
        } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
          details.line++;
          details.column = 1;
          details.seenCR = true;
        } else {
          details.column++;
          details.seenCR = false;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    if (endPos > input.length) {
      endPos--;
    }
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildException(message, expected, found, location) {
    function cleanupExpected(expected) {
      var i = 1;

      expected.sort(function(a, b) {
        if (a.type < b.type) {
          return -1;
        } else if (a.type > b.type) {
          return 1;
        } else if (a.value < b.value) {
          return -1;
        } else if (a.value > b.value) {
          return 1;
        } else if (a.description < b.description) {
          return -1;
        } else if (a.description > b.description) {
          return 1;
        } else {
          return 0;
        }
      });

      /*
       * This works because the bytecode generator guarantees that every
       * expectation object exists only once, so it's enough to use |===| instead
       * of deeper structural comparison.
       */
      while (i < expected.length) {
        if (expected[i - 1] === expected[i]) {
          expected.splice(i, 1);
        } else {
          i++;
        }
      }
    }

    function buildMessage(expected, found) {
      function stringEscape(s) {
        function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a string
         * literal except for the closing quote character, backslash, carriage
         * return, line separator, paragraph separator, and line feed. Any character
         * may appear in the form of an escape sequence.
         *
         * For portability, we also escape all control and non-ASCII characters.
         * Note that "\0" and "\v" escape sequences are not used because JSHint does
         * not like the first and IE the second.
         */
        return s
          .replace(/\\/g,   '\\\\')       // backslash
          .replace(/"/g,    '\\"')        // closing double quote
          .replace(/\x08/g, '\\b')        // backspace
          .replace(/\t/g,   '\\t')        // horizontal tab
          .replace(/\n/g,   '\\n')        // line feed
          .replace(/\f/g,   '\\f')        // form feed
          .replace(/\r/g,   '\\r')        // carriage return
          .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
          .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
          .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
          .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
      }

      var expectedDescs = new Array(expected.length),
        expectedDesc, foundDesc, i;

      for (i = 0; i < expected.length; i++) {
        expectedDescs[i] = expected[i].description;
      }

      expectedDesc = expected.length > 1
        ? expectedDescs.slice(0, -1).join(", ")
        + " or "
        + expectedDescs[expected.length - 1]
        : expectedDescs[0];

      foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

      return "Expected " + expectedDesc + " but " + foundDesc + " found.";
    }

    if (expected !== null) {
      cleanupExpected(expected);
    }

    return new peg$SyntaxError(
      message !== null ? message : buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$buildParseException() {
    return peg$buildException(
      null,
      peg$maxFailExpected,
      peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
      peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
    );
  }


  function peg$traceCall(parseFunc, name, argNames, args) {
    var argMap = {};
    for (let i = 0; i < args.length; i++) {
      argMap[argNames[i]] = args[i];
    }
    var startPos = peg$currPos;
    peg$tracer.trace({
      type:     "rule.enter",
      rule:     name,
      location: peg$computeLocation(startPos, startPos),
      args: argMap
    });
    var result = parseFunc.apply(null, args);
    if (result !== peg$FAILED) {
      peg$tracer.trace({
        type:     "rule.match",
        rule:     name,
        result:   result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: name,
        location: peg$computeLocation(startPos, startPos)
      });
    }
    return result;
  }

  var peg$tracer = "tracer" in options ? options.tracer : new peg$DefaultTracer();

  

  // expectations
  var peg$c0 = {"type":"end","description":"end of input"};
  var peg$c1 = {"type":"class","value":"[^\\['\"]","description":"[^\\['\"]"};
  var peg$c2 = {"type":"any","description":"any character"};
  var peg$c3 = {"type":"other","description":"array"};
  var peg$c4 = {"type":"other","description":"string literal"};

  // actions
  function peg$a0(toks) {
   return toks.join(''); 
  }
  function peg$a1(sp) {
   return "{" + sp + "}"; 
  }
  function peg$a2(toks) {
   return "{" + toks.join('') + "}"; 
  }
  function peg$a3(first, toks) {
   return first + (toks || []).join(''); 
  }
  function peg$a4() {
   return ":"; 
  }
  function peg$a5(s) {
   return s.slice(1,-1); 
  }
  function peg$a6(inner) {
   return "(" + inner + ")"; 
  }
  function peg$a7(inner) {
   return "{" + inner + "}"; 
  }

  // initializer
  

  // generated
  function peg$parsestart(silence) {
    var r1;
    r1 = peg$parseCode(silence);
    return r1;
  }
  function peg$parseCode(silence) {
    var r1,p2,r3,r4;
    p2 = peg$currPos;
    r3 = [];
    for (;;) {
      r4 = peg$parsePart(silence);
      if (r4!==peg$FAILED) {
        r3.push(r4);
      } else {
        break;
      }
    }
    // toks <- r3
    // free r4
    r1 = r3;
    peg$savedPos = p2;
    r1 = peg$a0(r3);
    // free p2
    return r1;
  }
  function peg$parsePart(silence) {
    var r1,p2;
    choice_1: {
    p2 = peg$currPos;
    r1 = peg$discardString();
    if (r1!==peg$FAILED) {
      r1 = input.substring(p2, peg$currPos);
      break choice_1;
    } else {
      r1 = peg$FAILED;
    }
    // free p2
    r1 = peg$parseArray(silence);
    if (r1!==peg$FAILED) {
      break choice_1;
    }
    p2 = peg$currPos;
    r1 = /[^"'[]+/y;
    r1.lastIndex = peg$currPos;
    if (r1.exec(input) !== null) {
      peg$currPos = r1.lastIndex;
      r1 = input.substring(p2, peg$currPos);
      break choice_1;
    } else {
      r1 = peg$FAILED;
      if (!silence) { peg$fail(peg$c1); }
      r1 = peg$FAILED;
    }
    // free p2
    p2 = peg$currPos;
    if (peg$currPos < input.length) {
      peg$currPos++;
      r1 = true;
      r1 = input.substring(p2, peg$currPos);
    } else {
      r1 = peg$FAILED;
      if (!silence) { peg$fail(peg$c2); }
      r1 = peg$FAILED;
    }
    // free p2
    } // choice_1
    return r1;
  }
  function peg$discardString() {
    var r1,p2,r3,r4,r5,p6,r7,r8;
    choice_1: {
    seq_1: {
    p2 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 39) {
      r3 = true;
      peg$currPos += 1;
    } else {
      r3 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_1;
    }
    for (;;) {
      choice_2: {
      seq_2: {
      p6 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 92) {
        r7 = true;
        peg$currPos += 1;
      } else {
        r7 = peg$FAILED;
        r5 = peg$FAILED;
        break seq_2;
      }
      if (peg$currPos < input.length) {
        peg$currPos++;
        r8 = true;
      } else {
        r8 = peg$FAILED;
        peg$currPos = p6;
        r5 = peg$FAILED;
        break seq_2;
      }
      r5 = true;
      } // seq_2
      if (r5!==peg$FAILED) {
        break choice_2;
      }
      // free r7,r8
      // free p6
      if (/^[^'\\]/.test(input.charAt(peg$currPos))) {
        r5 = true;
        peg$currPos++;
      } else {
        r5 = peg$FAILED;
      }
      } // choice_2
      if (r5===peg$FAILED) {
        break;
      }
    }
    // free r5
    r4 = true;
    // free r4
    if (input.charCodeAt(peg$currPos) === 39) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      peg$currPos = p2;
      r1 = peg$FAILED;
      break seq_1;
    }
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      break choice_1;
    }
    // free r3,r4
    // free p2
    seq_3: {
    p2 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_3;
    }
    for (;;) {
      choice_3: {
      seq_4: {
      p6 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 92) {
        r8 = true;
        peg$currPos += 1;
      } else {
        r8 = peg$FAILED;
        r5 = peg$FAILED;
        break seq_4;
      }
      if (peg$currPos < input.length) {
        peg$currPos++;
        r7 = true;
      } else {
        r7 = peg$FAILED;
        peg$currPos = p6;
        r5 = peg$FAILED;
        break seq_4;
      }
      r5 = true;
      } // seq_4
      if (r5!==peg$FAILED) {
        break choice_3;
      }
      // free r8,r7
      // free p6
      if (/^[^"\\]/.test(input.charAt(peg$currPos))) {
        r5 = true;
        peg$currPos++;
      } else {
        r5 = peg$FAILED;
      }
      } // choice_3
      if (r5===peg$FAILED) {
        break;
      }
    }
    // free r5
    r3 = true;
    // free r3
    if (input.charCodeAt(peg$currPos) === 34) {
      r3 = true;
      peg$currPos += 1;
    } else {
      r3 = peg$FAILED;
      peg$currPos = p2;
      r1 = peg$FAILED;
      break seq_3;
    }
    r1 = true;
    } // seq_3
    // free r4,r3
    // free p2
    } // choice_1
    return r1;
  }
  function peg$parseArray(silence) {
    var r1,p2,p3,r4,r5,r6,p7,r8,r9,r10,r11,r12,r13;
    choice_1: {
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_1;
    }
    r5 = peg$parse_();
    // sp <- r5
    if (input.charCodeAt(peg$currPos) === 93) {
      r6 = true;
      peg$currPos += 1;
    } else {
      r6 = peg$FAILED;
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_1;
    }
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a1(r5);
      break choice_1;
    }
    // free r4,r6
    // free p3
    // free p2
    p2 = peg$currPos;
    seq_2: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      r6 = true;
      peg$currPos += 1;
    } else {
      r6 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_2;
    }
    seq_3: {
    p7 = peg$currPos;
    r8 = peg$parse_();
    r9 = peg$parseAssocPairs();
    if (r9===peg$FAILED) {
      peg$currPos = p7;
      r4 = peg$FAILED;
      break seq_3;
    }
    r10 = peg$parse_();
    r11 = peg$parseOptTrailingComma();
    r4 = [r8,r9,r10,r11];
    } // seq_3
    // toks <- r4
    if (r4===peg$FAILED) {
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_2;
    }
    // free r8,r9,r10,r11
    // free p7
    if (input.charCodeAt(peg$currPos) === 93) {
      r11 = true;
      peg$currPos += 1;
    } else {
      r11 = peg$FAILED;
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_2;
    }
    r1 = true;
    } // seq_2
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a2(r4);
      break choice_1;
    }
    // free r6,r11
    // free p3
    // free p2
    p2 = peg$currPos;
    seq_4: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      r6 = "[";
      peg$currPos += 1;
    } else {
      r6 = peg$FAILED;
      r11 = peg$FAILED;
      break seq_4;
    }
    r10 = peg$parse_();
    r9 = peg$parseListItems();
    if (r9===peg$FAILED) {
      peg$currPos = p3;
      r11 = peg$FAILED;
      break seq_4;
    }
    r8 = peg$parse_();
    r12 = peg$parseOptTrailingComma();
    if (input.charCodeAt(peg$currPos) === 93) {
      r13 = "]";
      peg$currPos += 1;
    } else {
      r13 = peg$FAILED;
      peg$currPos = p3;
      r11 = peg$FAILED;
      break seq_4;
    }
    r11 = [r6,r10,r9,r8,r12,r13];
    } // seq_4
    // toks <- r11
    // free r6,r10,r9,r8,r12,r13
    // free p3
    r1 = r11;
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a0(r11);
    }
    // free p2
    } // choice_1
    if (r1===peg$FAILED) {
      if (!silence) { peg$fail(peg$c3); }
    }
    return r1;
  }
  function peg$parse_() {
    var p1,r2;
    p1 = peg$currPos;
    r2 = /[\t\n\r ]*/y;
    r2.lastIndex = peg$currPos;
    if (r2.exec(input) !== null) {
      peg$currPos = r2.lastIndex;
      r2 = input.substring(p1, peg$currPos);
    } else {
      r2 = peg$FAILED;
      r2 = peg$FAILED;
    }
    // free p1
    return r2;
  }
  function peg$parseAssocPairs() {
    var r1,p2,p3,r4,r5,p6,r7,r8,r9,r10;
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    r4 = peg$parseAssocPair();
    // first <- r4
    if (r4===peg$FAILED) {
      r1 = peg$FAILED;
      break seq_1;
    }
    seq_2: {
    p6 = peg$currPos;
    r7 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 44) {
      r8 = ",";
      peg$currPos += 1;
    } else {
      r8 = peg$FAILED;
      peg$currPos = p6;
      r5 = peg$FAILED;
      break seq_2;
    }
    r9 = peg$parse_();
    r10 = peg$parseAssocPairs();
    if (r10===peg$FAILED) {
      peg$currPos = p6;
      r5 = peg$FAILED;
      break seq_2;
    }
    r5 = [r7,r8,r9,r10];
    } // seq_2
    if (r5===peg$FAILED) {
      r5 = null;
    }
    // free r7,r8,r9,r10
    // free p6
    // toks <- r5
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a3(r4, r5);
    }
    // free p3
    // free p2
    return r1;
  }
  function peg$parseOptTrailingComma() {
    var r1,p2,p3,r4;
    choice_1: {
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 44) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_1;
    }
    peg$discard_();
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      r1 = input.substring(p2, peg$currPos);
      break choice_1;
    } else {
      r1 = peg$FAILED;
    }
    // free r4
    // free p3
    // free p2
    r1 = '';
    } // choice_1
    return r1;
  }
  function peg$parseListItems() {
    var r1,p2,p3,r4,r5,p6,r7,r8,r9,r10;
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    r4 = peg$parseValueNoComma();
    // first <- r4
    if (r4===peg$FAILED) {
      r1 = peg$FAILED;
      break seq_1;
    }
    seq_2: {
    p6 = peg$currPos;
    r7 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 44) {
      r8 = ",";
      peg$currPos += 1;
    } else {
      r8 = peg$FAILED;
      peg$currPos = p6;
      r5 = peg$FAILED;
      break seq_2;
    }
    r9 = peg$parse_();
    r10 = peg$parseListItems();
    if (r10===peg$FAILED) {
      peg$currPos = p6;
      r5 = peg$FAILED;
      break seq_2;
    }
    r5 = [r7,r8,r9,r10];
    } // seq_2
    if (r5===peg$FAILED) {
      r5 = null;
    }
    // free r7,r8,r9,r10
    // free p6
    // toks <- r5
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a3(r4, r5);
    }
    // free p3
    // free p2
    return r1;
  }
  function peg$parseAssocPair() {
    var r1,p2,r3,p4,r5,r6,p7,p8,r9,r10;
    p2 = peg$currPos;
    seq_1: {
    p4 = peg$currPos;
    r5 = peg$parseQuotedKey();
    if (r5===peg$FAILED) {
      r3 = peg$FAILED;
      break seq_1;
    }
    p7 = peg$currPos;
    seq_2: {
    p8 = peg$currPos;
    peg$discard_();
    if (input.substr(peg$currPos,2) === "=>") {
      r9 = true;
      peg$currPos += 2;
    } else {
      r9 = peg$FAILED;
      peg$currPos = p8;
      r6 = peg$FAILED;
      break seq_2;
    }
    r6 = true;
    } // seq_2
    if (r6!==peg$FAILED) {
      peg$savedPos = p7;
      r6 = peg$a4();
    } else {
      peg$currPos = p4;
      r3 = peg$FAILED;
      break seq_1;
    }
    // free r9
    // free p8
    // free p7
    r9 = peg$parse_();
    r10 = peg$parseValueNoComma();
    if (r10===peg$FAILED) {
      peg$currPos = p4;
      r3 = peg$FAILED;
      break seq_1;
    }
    r3 = [r5,r6,r9,r10];
    } // seq_1
    // toks <- r3
    // free r5,r6,r9,r10
    // free p4
    r1 = r3;
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a0(r3);
    }
    // free p2
    return r1;
  }
  function peg$discard_() {
    var r1;
    r1 = /[\t\n\r ]*/y;
    r1.lastIndex = peg$currPos;
    if (r1.exec(input) !== null) {
      peg$currPos = r1.lastIndex;
    } else {
      r1 = peg$FAILED;
    }
    return r1;
  }
  function peg$parseValueNoComma() {
    var r1,p2,r3,r4,p5,r6;
    p2 = peg$currPos;
    r3 = [];
    for (;;) {
      seq_1: {
      p5 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        r6 = true;
      } else {
        r6 = peg$FAILED;
      }
      if (r6 === peg$FAILED) {
        r6 = void 0;
      } else {
        r6 = peg$FAILED;
        peg$currPos = p5;
        r4 = peg$FAILED;
        break seq_1;
      }
      r4 = peg$parseValuePart();
      if (r4===peg$FAILED) {
        peg$currPos = p5;
        r4 = peg$FAILED;
        break seq_1;
      }
      } // seq_1
      if (r4!==peg$FAILED) {
        r3.push(r4);
      } else {
        break;
      }
      // free p5
    }
    if (r3.length === 0) {
      r3 = peg$FAILED;
    }
    // toks <- r3
    // free r4
    r1 = r3;
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a0(r3);
    }
    // free p2
    return r1;
  }
  function peg$parseQuotedKey() {
    var r1,p2,p3,r4,r5,r6,r7;
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    seq_2: {
    if (/^["']/.test(input.charAt(peg$currPos))) {
      r5 = true;
      peg$currPos++;
    } else {
      r5 = peg$FAILED;
      r4 = peg$FAILED;
      break seq_2;
    }
    r6 = /[0-9A-Z_a-z\u017F\u212A]+/y;
    r6.lastIndex = peg$currPos;
    if (r6.exec(input) !== null) {
      peg$currPos = r6.lastIndex;
    } else {
      r6 = peg$FAILED;
      peg$currPos = p3;
      r4 = peg$FAILED;
      break seq_2;
    }
    if (/^["']/.test(input.charAt(peg$currPos))) {
      r7 = true;
    } else {
      r7 = peg$FAILED;
      peg$currPos = p3;
      r4 = peg$FAILED;
      break seq_2;
    }
    r4 = true;
    } // seq_2
    if (r4!==peg$FAILED) {
      r4 = void 0;
      peg$currPos = p3;
    } else {
      r1 = peg$FAILED;
      break seq_1;
    }
    // free r5,r6,r7
    r7 = peg$parseString(true);
    // s <- r7
    if (r7===peg$FAILED) {
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_1;
    }
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a5(r7);
    }
    // free r4
    // free p3
    // free p2
    return r1;
  }
  function peg$parseValuePart() {
    var r1,p2,p3,r4,r5,r6,r7;
    choice_1: {
    r1 = peg$parseString(true);
    if (r1!==peg$FAILED) {
      break choice_1;
    }
    r1 = peg$parseArray(true);
    if (r1!==peg$FAILED) {
      break choice_1;
    }
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_1;
    }
    r5 = peg$parseValueParts();
    // inner <- r5
    if (input.charCodeAt(peg$currPos) === 41) {
      r6 = true;
      peg$currPos += 1;
    } else {
      r6 = peg$FAILED;
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_1;
    }
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a6(r5);
      break choice_1;
    }
    // free r4,r6
    // free p3
    // free p2
    p2 = peg$currPos;
    seq_2: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      r6 = true;
      peg$currPos += 1;
    } else {
      r6 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_2;
    }
    r4 = peg$parseValueParts();
    // inner <- r4
    if (input.charCodeAt(peg$currPos) === 125) {
      r7 = true;
      peg$currPos += 1;
    } else {
      r7 = peg$FAILED;
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_2;
    }
    r1 = true;
    } // seq_2
    if (r1!==peg$FAILED) {
      peg$savedPos = p2;
      r1 = peg$a7(r4);
      break choice_1;
    }
    // free r6,r7
    // free p3
    // free p2
    p2 = peg$currPos;
    r1 = /[^"'(),[\]{}]+/y;
    r1.lastIndex = peg$currPos;
    if (r1.exec(input) !== null) {
      peg$currPos = r1.lastIndex;
      r1 = input.substring(p2, peg$currPos);
      break choice_1;
    } else {
      r1 = peg$FAILED;
      r1 = peg$FAILED;
    }
    // free p2
    if (input.charCodeAt(peg$currPos) === 44) {
      r1 = ",";
      peg$currPos += 1;
    } else {
      r1 = peg$FAILED;
    }
    } // choice_1
    return r1;
  }
  function peg$parseString(silence) {
    var r1,p2,p3,r4,r5,r6,p7,r8,r9;
    choice_1: {
    p2 = peg$currPos;
    seq_1: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 39) {
      r4 = true;
      peg$currPos += 1;
    } else {
      r4 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_1;
    }
    for (;;) {
      choice_2: {
      seq_2: {
      p7 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 92) {
        r8 = true;
        peg$currPos += 1;
      } else {
        r8 = peg$FAILED;
        r6 = peg$FAILED;
        break seq_2;
      }
      if (peg$currPos < input.length) {
        peg$currPos++;
        r9 = true;
      } else {
        r9 = peg$FAILED;
        peg$currPos = p7;
        r6 = peg$FAILED;
        break seq_2;
      }
      r6 = true;
      } // seq_2
      if (r6!==peg$FAILED) {
        break choice_2;
      }
      // free r8,r9
      // free p7
      if (/^[^'\\]/.test(input.charAt(peg$currPos))) {
        r6 = true;
        peg$currPos++;
      } else {
        r6 = peg$FAILED;
      }
      } // choice_2
      if (r6===peg$FAILED) {
        break;
      }
    }
    // free r6
    r5 = true;
    // free r5
    if (input.charCodeAt(peg$currPos) === 39) {
      r5 = true;
      peg$currPos += 1;
    } else {
      r5 = peg$FAILED;
      peg$currPos = p3;
      r1 = peg$FAILED;
      break seq_1;
    }
    r1 = true;
    } // seq_1
    if (r1!==peg$FAILED) {
      r1 = input.substring(p2, peg$currPos);
      break choice_1;
    } else {
      r1 = peg$FAILED;
    }
    // free r4,r5
    // free p3
    // free p2
    p2 = peg$currPos;
    seq_3: {
    p3 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      r5 = true;
      peg$currPos += 1;
    } else {
      r5 = peg$FAILED;
      r1 = peg$FAILED;
      break seq_3;
    }
    for (;;) {
      choice_3: {
      seq_4: {
      p7 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 92) {
        r9 = true;
        peg$currPos += 1;
      } else {
        r9 = peg$FAILED;
        r6 = peg$FAILED;
        break seq_4;
      }
      if (peg$currPos < input.length) {
        peg$currPos++;
        r8 = true;
      } else {
        r8 = peg$FAILED;
        peg$currPos = p7;
        r6 = peg$FAILED;
        break seq_4;
      }
      r6 = true;
      } // seq_4
      if (r6!==peg$FAILED) {
        break choice_3;
      }
      // free r9,r8
      // free p7
      if (/^[^"\\]/.test(input.charAt(peg$currPos))) {
        r6 = true;
        peg$currPos++;
      } else {
        r6 = peg$FAILED;
